name:                oeis-b-files
version:             1
homepage:            https://github.com/Basti53/oeis-b-files#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Karlsson 
build-type:          Simple 
extra-source-files:  README.md 
cabal-version:       >=1.10

library 
  hs-source-dirs:    src 
  exposed-modules:   B
  build-depends:     base, text
  default-language:  Haskell2010